src/index.scss
html,
body {
  max-width: 100%;
  overflow-x: hidden;
  box-sizing: border-box;
  background-color: #000;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-overflow-scrolling: touch;
  margin: 0;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

* {
  margin: 0;
}

html {
  background-color: #000;
}

.row {
  color: #fff;

  h2 {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
      "Helvetica Neue", sans-serif;
    -moz-osx-font-smoothing: grayscale;
    font-size: 1.5em;
    font-weight: bolder;
    padding: 0 40px;
  }
}

.row__posters {
  display: flex;
  overflow-x: scroll;
  overflow-y: hidden;
  padding: 20px 40px;
}

.row__posters::-webkit-scrollbar {
  display: none;
}

.row__poster {
  margin-right: 10px;
  max-height: 100px;
  object-fit: contain;
  opacity: 0.8;
  transition: transform 0.45s;
  width: 100%;
}

.row__poster:hover {
  cursor: pointer;
  opacity: 1;
  transform: scale(1.08);
}

.row__posterLarge {
  max-height: 250px;
}

.row__posterLarge:hover {
  opacity: 1;
  transform: scale(1.09);
}

.banner {
  margin-top: 60px;
  background-image: url("https://image.tmdb.org/t/p/original/jTswp6KyDYKtvC52GbHagrZbGvD.jpg");
  background-position: center center;
  background-size: cover;
  color: #fff;
  height: 700px;
  object-fit: contain;
  position: relative;
  display: flex;
  align-items: center;

  &:before,
  &:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
  }

  &:before {
    background: #151515;
    opacity: 0.15;
    bottom: 0;
  }

  &:after {
    background: linear-gradient(to bottom, rgba(#151515, 0.75) 0%, rgba(#151515, 0) 100%);
    height: 150px;
  }
}

.banner__contents {
  padding: 0 40px;
  position: relative;
  z-index: 3;
}

.banner__title,
.banner__description {
  text-shadow: 0px 2px 0px rgba(black, 0.5);
}

.banner__title {
  font-size: 3rem;
  font-weight: 800;
  padding-bottom: 0.3rem;
}

.banner__description {
  font-size: 16px;
  line-height: 1.3;
  line-height: 24px;
  max-width: 360px;
  padding-top: 1rem;
  width: 45rem;
}

.banner__button {
  background-color: rgba(51, 51, 51, 0.5);
  border: none;
  border-radius: 0.2vw;
  color: #fff;
  cursor: pointer;
  font-weight: 700;
  margin-right: 1rem;
  outline: none;
  padding: 0.5rem 2rem;
}

.banner__button:hover {
  background-color: #e6e6e6;
  color: #000;
  transition: all 0.2s;
}

.banner--fadeBottom {
  background-image: linear-gradient(180deg,
      transparent,
      rgba(37, 37, 37, 0.61),
      #111);
  height: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.recommendations {
  margin-top: -100px;
  position: relative;
  z-index: 5;
}

.nav {
  background-color: #000;
  display: flex;
  min-height: 20px;
  justify-content: space-between;
  align-items: center;
  padding: 10px 40px;
  
  top: 0;
  transition: all 0.5s;
  transition-timing-function: ease-in;
  width: 100%;
  z-index: 99;

  .search-page-wrapper & {
    background: #000;
  }
}

.nav-fixed {
  position: fixed;
}

.nav__black {
  background-color: #000;
}

.nav__logo {
  left: 40px;
  width: 120px;
  filter: drop-shadow(0px 4px 12px rgba(black, 0.5))
}

.nav__avatar {
  right: 20px;
  width: 30px;
}

.main {
  background: url("https://assets.nflxext.com/ffe/siteui/vlv3/11c803d4-06f3-467e-91f7-0560ce15a396/5ac22c62-f87e-45e3-8746-418d647185c9/VN-en-20210517-popsignuptwoweeks-perspective_alpha_website_small.jpg");
  background-size: cover;
  min-height: 100vh;
}

.login-body {
  align-items: center;
  display: grid;
  justify-content: center;
  min-height: 100vh;
}

.login-body__form {
  background-color: rgba(0, 0, 0, 0.8);
  box-sizing: border-box;
  margin-top: 62px;
  max-width: 420px;
  min-width: 420px;
  padding: 48px 62px;
}

.login-body h1 {
  color: #fff;
  font-size: 32px;
  font-weight: 700;
  margin-bottom: 28px;
}

.login-body__input input {
  background: #333;
  border: 0;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  outline: none;
  padding: 16px 20px;
  width: 86%;
}

.mb-16 {
  margin-bottom: 16px;
}

.login-body__submit-btn {
  background: #e50914;
  border: 0;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  margin-top: 32px;
  outline: none;
  padding: 16px;
  width: 100%;
}

.login-body__submit-btn:hover {
  cursor: pointer;
}

.login-body__options {
  color: #b3b3b3;
  display: grid;
  font-size: 13px;
  font-weight: 500;
  grid-template-columns: repeat(2, 1fr);
  margin-bottom: 48px;
  margin-top: 12px;
}

.login-body__options:hover {
  cursor: pointer;
}

.login-body__need-help {
  text-align: right;
}

.login-body__fb {
  align-items: center;
  color: #b3b3b3;
  display: grid;
  font-size: 13px;
  grid-template-columns: min-content auto;
}

.login-body__fb:hover {
  cursor: pointer;
}

.login-body__fb img {
  height: 20px;
  margin-right: 12px;
  width: 20px;
}

.login-body__new-to-nl {
  color: #737373;
  font-size: 16px;
  font-weight: 500;
  margin-top: 16px;
}

.login-body__sign-up {
  color: #fff;
}

.login-body__sign-up:hover {
  cursor: pointer;
}

.login-body__google_captcha {
  color: #8c8c8c;
  font-size: 13px;
  margin-top: 16px;
}

.login-body__learn-more {
  color: #0071eb;
}

.login-body__learn-more:hover {
  cursor: pointer;
}

.detail {
  background: #111;
  bottom: 0;
  position: fixed;
  right: 0;
  top: 0;
  width: 450px;
  z-index: 999;
}

.detail__image {
  align-items: end;
  background-position: center center;
  background-size: cover;
  display: grid;
  height: 282px;
  width: 100%;
}
/* ... */

